--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 APP_NAME=Ourika
-APP_ENV=local
+APP_ENV=production
 APP_KEY=base64:vdGdLqMydkuuNOjmjoNPKslBC9jSMXOFe8Tv0fSIiwA=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http:http://oumoussa98-ourika.herokuapp.com/public/
 
 LOG_CHANNEL=stack
 
